app2/deploy/Istio-gateway/gateway-br-app1.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway-br-app2
  namespace: br-app2
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - web.br-app2.com
    port:
      name: http
      number: 80
      protocol: HTTP
