app2/deploy/Istio-gateway/vs-br-app1.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-br-app2-ingress
  namespace: br-app2
spec:
  gateways:
  - gateway-br-app2
  hosts:
  - web.br-app2.com
  http:
  - route:
    - destination:
        host: br-app2-svc
        port:
          number: 80
